# BiliScript

./: .gitignore  Makefile  README.md  cheat.py  chip_check.py  chip_concat.py  chip_plus.py  chip_shuffle.py  chip_vs.py  chip_vs_three.py  daemon.sh  dashboard.py  dashboard_quick.py  download.py  download2.py  download_pw.py  intact.sh  kimiDB.py  launch.bat  launch_pw.bat  master_local.py  master_positive.py  mixin.py  play.00.py  pyproject.toml  slaver.py  sqliteDB.py  upload.00.py  upload.10.py  util.py
tool/example/: config.toml
