[tool.poetry]
name = "biliscript"
version = "0.1.0"
description = ""
authors = ["gaoming714 <gaoming714@outlook.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11 || ~3.12"
selenium = "^4.3.0"
tqdm = "^4.64.0"
loguru = "^0.7.2"

requests = "^2.28.1"

beautifulsoup4 = "^4.11.1"
lxml = "^5.3.0"
rich = "^13.7.1"

webdriver-manager = "^4.0.1"
playwright = "^1.48.0"
ipython = "^8.25.0"
tomlkit = "^0.13.2"

retrying = "^1.3.4"
pandas = "^2.2.2"
pendulum = "^3.0.0"
ipdb = "^0.13.13"
brotli = "1.1.0"
tenacity = "^9.0.0"
librosa = "^0.10.2.post1"
srt = "^3.5.3"
openai = "^1.54.4"
antiocr = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
