[project]
name = "biliscript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "ipdb>=0.13.13",
    "ipython>=8.29.0",
    "librosa>=0.10.2.post1",
    "loguru>=0.7.2",
    "lxml>=5.3.0",
    "openai>=1.56.2",
    "pandas>=2.2.3",
    "pendulum>=3.0.0",
    "playwright>=1.49.0",
    "polars>=1.15.0",
    "rich>=13.9.4",
    "soundfile>=0.12.1",
    "srt>=3.5.3",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
]
